@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-16T08:27:40Z",
+  "timestamp" : "2022-10-16T16:30:08Z",
   "count_outdated" : 2501,
   "uniques_outdated" : 643,
-  "count" : 2541,
-  "uniques" : 668,
+  "count" : 2542,
+  "uniques" : 669,
   "clones" : [
     {
       "timestamp": "2022-10-07T00:00:00Z",
@@ -63,10 +63,10 @@
     },
     {
       "timestamp": "2022-10-16T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ]
     }
   ]
 }
