@@ -1,6 +1,6 @@
 {
-  "count": 40,
-  "uniques": 17,
+  "count": 41,
+  "uniques": 18,
   "clones": [
     {
       "timestamp": "2022-10-07T00:00:00Z",
@@ -44,8 +44,8 @@
     },
     {
       "timestamp": "2022-10-16T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 3,
+      "uniques": 3
     }
   ]
 }
