@@ -1,3 +1,11 @@
+2022-10-16T16:30:08Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3260145882 # 941
+* notice: last 14d: unq all: 18 41
+* notice: prev accum: outdated-unq outdated-all / unq all: 643 2501 / 668 2541
+* notice: next accum: outdated-unq outdated-all / unq all: 643 2501 / 669 2542
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +3 +3 -0 -0 / 3 3
+* notice: removed / changed dates: [] / [2022-10-16]
+
 2022-10-16T08:27:40Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3258817420 # 940
 * notice: last 14d: unq all: 17 40
